2007-05-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/iterators.R (print.igraph.es, print.igraph.vs) :
	pretty printing

	* interfaces/R/igraph/R/interface.R (get.edges) : added
	* interfaces/R/src/rinterface.c (R_igraph_get_edges) : added

2007-05-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (write.graph) : convert format name to
	lowercase

	* interfaces/R/igraph/R/foreign.R (write.graph, write.graph.gml) :
	GML format added
	* interfaces/R/src/rinterface.c (R_igraph_write_graph_gml) : added

2007-05-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph, read.graph.gml) :
	GML format added
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_gml) : added

2007-05-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (revolver.p.p) : added
	* interfaces/R/src/rinterface.c (R_igraph_revolver_p_p) : added

2007-05-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.d) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_d) : added

	* interfaces/R/igraph/R/revolver.R (revolver.d.d) : added
	* interfaces/R/src/rinterface.c (R_igraph_revolver_d_d) : added

2007-05-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R : evolver.* renamed to revolver.*
	* interfaces/R/src/rinterface.c : R_igraph_evolver_* renamed to
	R_igraph_revolver_*

2007-05-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (vertex.connectivity, edge.connectivity)
	(graph.cohesion, graph.adhesion) : added 'checks' argument
	* interfaces/R/src/rinterface.c (R_igraph_vertex_connectivity)
	(R_igraph_edge_connectivity, R_igraph_cohesion, R_igraph_adhesion) :
	updated

	* interfaces/R/igraph/R/structural.properties.R (girth) : added
	* interfaces/R/src/rinterface.c (R_igraph_girth) : added

	* interfaces/R/igraph/R/print.R (print.igraph) : format edge list better
